Fix the icons that were not showing properly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,14 +7,15 @@ border: none;}
 
 body {font-family :'Alegreya' ,sans-serif;
 font-weight: 300;
-color: #3a3a3a}
+color: #3a3a3a;
+}
 
 /*heading and logo*/
 
 h1, h2 {
     font-family:'Exo 2' ,sans-serif ;
     text-transform: uppercase;
-    letter-spacing : 3px;
+    letter-spacing : 2px;
     color: #252525;
 
 }
@@ -186,7 +187,7 @@ hr {
     margin:0 auto;
 }
 #circle-cover-bg {
-    background: url('../images/feat.jpeg') no-repeat center center;
+    background: url('../images/fea2.jpeg') no-repeat center center;
     height: 100%;
     border-radius: 50%;
 }
